tests/core/invalid_assign.sy
start :: fn {
    a := 1
    a = 0.1
    a
}

// error: $MismatchAssign{ expected: Type::Int, got: Type::Float }
